--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">Movie Pager</string>
+    <string name="app_name">Fragment Demo</string>
     <string name="search_hint">Movie title...</string>
     <string name="itunes_base_url">http://itunes.apple.com/us/movie/</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
